[gd_scene load_steps=6 format=2]

[ext_resource path="res://FX/Explosion.gd" type="Script" id=1]
[ext_resource path="res://assets/Sounds/Explosion SFX/Magic_Explosion_Short19.wav" type="AudioStream" id=2]
[ext_resource path="res://FX/CircleBlastVFX.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=14]
radius = 48.9562

[sub_resource type="CircleShape2D" id=15]
radius = 245.39

[node name="Explosion" type="Area2D"]
collision_mask = 14
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 14 )

[node name="ShakeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShakeArea"]
light_mask = 0
shape = SubResource( 15 )

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -9.0
autoplay = true

[node name="CircleBlastVFX" parent="." instance=ExtResource( 4 )]
emitting = false
one_shot = true

[connection signal="body_entered" from="ShakeArea" to="." method="_on_ShakeArea_player_entered"]
